# Libre-Spice

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.56580CE45D8EE531.idx
src/: main.cpp
